# TrabalhoFinal

./: CMakeLists.txt  Funcionarios.hpp  README.md  Setor.cpp  Setor.hpp  funcionario.cpp  funcionario.hpp  main.cpp
AreaTrab/: AreaFront.cpp  Areaback.cpp  Areaback.hpp
AreaTrab/include/: AreaEngenharia.hpp  AreaFront.hpp  Areaback.hpp
AreaTrab/source/: AreaEngenharia.cpp  AreaFront.cpp  Areaback.cpp
Core/: Acesso.cpp  Exceptions.hpp  Setor.cpp  Setor.hpp  funcionario.cpp  funcionario.hpp
Core/include/: Acesso.hpp  Exceptions.hpp  Funcionario.hpp  Setor.hpp
Core/source/: Acesso.cpp  Exceptions.cpp  Funcionario.cpp  Setor.cpp
Funcionarios/: DesenvBack.cpp  DesenvBack.hpp  DesenvFront.cpp  DesenvFront.hpp  DesenvFull.cpp  EngenheiroS.cpp  EngenheiroS.hpp  Estagiario.cpp  Estagiario.hpp  Funcionarios.hpp
Funcionarios/include/: DesenvBack.hpp  DesenvFront.hpp  DesenvFull.hpp  EngenheiroS.hpp  Estagiario.hpp  Funcionarios.hpp
Funcionarios/source/: DesenvBack.cpp  DesenvFront.cpp  DesenvFull.cpp  EngenheiroS.cpp  Estagiario.cpp
Setores/include/: AreaEngenharia.hpp  AreaFront.hpp  Areaback.hpp
Setores/source/: AreaEngenharia.cpp  AreaFront.cpp  Areaback.cpp
testes/: Teste.cpp
